force-app/main/default/objects/Panel_Results__c/Panel_Results__c.object-meta.xml
<CustomObject>
    <label>Panel Result</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Panel Results ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>