force-app/main/default/objects/Panel_Results__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <label>Panel</label>
    <referenceTo>Panel__c</referenceTo>
    <relationshipLabel>Panel Results</relationshipLabel>
    <relationshipName>Panel_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>