force-app/main/default/objects/Panel_Results__c/fields/Repanel__c.field-meta.xml
<CustomField>
    <fullName>Repanel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repanel</label>
    <type>Checkbox</type>
</CustomField>