force-app/main/default/objects/Panel_Results__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <referenceTo>Technology__c</referenceTo>
    <relationshipLabel>Panel Results</relationshipLabel>
    <relationshipName>Panel_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>